--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -17,9 +17,9 @@
 }
 
 
-body {
-  margin-top: 50px;
-}
+//body {
+//  margin-top: 50px;
+//}
 
 .flip-container {
   .perspective(1000);
@@ -77,6 +77,7 @@ body {
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
   backface-visibility: hidden;
+  padding: 30px 10px 10px 10px;
 }
 
 .chart-holder {
@@ -115,10 +116,10 @@ body {
 
 .chart {
   position: relative;
-  width: 920px;
+  width: 100%;
   height: 210px;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
+  //margin-top: 30px;
+  //margin-bottom: 10px;
+  //margin-left: 10px;
+  //margin-right: 10px;
 }
