Display user name, followers_count, status_count

--- a/app/views/userprofile.scala.html
+++ b/app/views/userprofile.scala.html
@@ -145,9 +145,22 @@
                                     <div class="col-sm-5">
 
                                         <div class="panel panel-default">
-                                            <div class="panel-thumbnail"><img src="assets/img/default_profile.png" class="img-responsive"></div>
-                                            <div class="panel-body">
-                                                <p class="lead">Urbanization</p>
+                                            <div class="panel-thumbnail">
+                                                <table id="wrapper" style="
+                                                    vertical-align: middle;
+                                                    text-align: center;
+                                                    height: 100%;
+                                                    width: 100%;
+                                                    margin: 0;
+                                                    padding: 0;
+                                                    border: 0;
+                                                ">
+                                                    <tr>
+                                                        <td><img id="profile-image" src="assets/img/default_profile.png" style="max-width: 100%;"></td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                            <div id="user-basic-data" class="panel-body">
                                                 <p>45 Followers, 13 Posts</p>
 
                                                 <p>
