--- a/app/assets/stylesheets/facebook.css
+++ b/app/assets/stylesheets/facebook.css
@@ -121,11 +121,11 @@ hr {
 
 .logo {
   display:block;
-  padding:3px;
+  padding:4px 5px;
   background-color:#fff;
   color:#3B5999;
   height:28px;
-  width:28px;
+  /*width:28px;*/
   margin:9px;
   margin-right:2px;
   margin-left:15px;
@@ -133,7 +133,7 @@ hr {
   font-weight:700;
   text-align:center;
   text-decoration:none;
-  text-shadow:0 0 1px;
+  /*text-shadow:0 0 1px;*/
   border-radius:2px;
 }
 #sidebar-footer {
