--- a/app/assets/stylesheets/facebook.css
+++ b/app/assets/stylesheets/facebook.css
@@ -211,7 +211,7 @@ h1,h2,h3 {
 }
 
 .modal-header, .modal-footer {
-	background-color:#f2f2f2;
+	/*background-color:#f2f2f2;*/
     font-weight:800;
     font-size:12px;
 }
@@ -219,6 +219,14 @@ h1,h2,h3 {
 .modal-footer i, .well i {
     font-size:20px;
     color:#c0c0c0;
+}
+
+.modal-footer {
+    display: inline-block;
+    width: 100%;
+    padding: 19px 20px 10px;
+    margin-top: 0px;
+    text-align: right;
 }
 
 .modal-body {
@@ -284,4 +292,105 @@ small.text-muted {
   #sidebar, #sidebar a, #sidebar-footer a {
     padding-left:3px;
   }
+}
+
+#map  {
+    width: 100%;
+    height: 300px;
+    margin-top: 20px;
+}
+/*
+ * "Simple Vertical Tab"
+ * --------------------------------------------------
+ */
+
+/*  bhoechie tab */
+div.bhoechie-tab-container {
+    z-index: 10;
+    background-color: #ffffff;
+    padding: 0 !important;
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    border: 1px solid #ddd;
+    /* margin-top: 20px; */
+    /* margin-left: 50px; */
+    -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    -moz-box-shadow: 0 6px 12px rgba(0,0,0,.175);
+    background-clip: padding-box;
+    /* opacity: 0.97; */
+    width: 100%;
+    filter: alpha(opacity=97);
+}
+div.bhoechie-tab-menu{
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group{
+    margin-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group>a{
+    margin-bottom: 0;
+}
+div.bhoechie-tab-menu div.list-group>a .glyphicon,
+div.bhoechie-tab-menu div.list-group>a .fa {
+    color: #5A55A3;
+}
+div.bhoechie-tab-menu div.list-group>a:first-child{
+    border-top-right-radius: 0;
+    -moz-border-top-right-radius: 0;
+}
+div.bhoechie-tab-menu div.list-group>a:last-child{
+    border-bottom-right-radius: 0;
+    -moz-border-bottom-right-radius: 0;
+}
+div.bhoechie-tab-menu div.list-group>a.active,
+div.bhoechie-tab-menu div.list-group>a.active .glyphicon,
+div.bhoechie-tab-menu div.list-group>a.active .fa{
+    background-color: #5A55A3;
+    background-image: #5A55A3;
+    color: #ffffff;
+}
+div.bhoechie-tab-menu div.list-group>a.active:after{
+    content: '';
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    margin-top: -13px;
+    border-left: 0;
+    border-bottom: 13px solid transparent;
+    border-top: 13px solid transparent;
+    border-left: 10px solid #5A55A3;
+}
+
+div.bhoechie-tab-content{
+    background-color: #ffffff;
+    /* border: 1px solid #eeeeee; */
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+div.bhoechie-tab div.bhoechie-tab-content:not(.active){
+    display: none;
+}
+
+.glyphicon-list {
+    margin-top: 5px;
+    margin-bottom: 15px;
+    font-size: 40px;
+}
+
+/*
+ * Others
+ * --------------------------------------------------
+ */
+.check-twitter {
+    display: none;
+    color: #4a6db9;
+    float: right;
+}
+
+a:hover .check-twitter {
+    display: inline;
 }
