--- a/app/views/userprofile.scala.html
+++ b/app/views/userprofile.scala.html
@@ -23,8 +23,6 @@
         <script type='text/javascript' src='@routes.Assets.at("lib/jquery/jquery.min.js")'></script>
         <script type='text/javascript' src='@routes.Assets.at("lib/flot/jquery.flot.js")'></script>
         <script type='text/javascript' src='@routes.Assets.at("lib/flot/jquery.flot.categories.js")'></script>
-        <script type='text/javascript' src='@routes.Assets.at("javascripts/index.js")'></script>
-
 
     </head>
     <body data-ws-url="@routes.HomeController.ws.webSocketURL()">
@@ -49,6 +47,7 @@
         @*</div>*@
 
         <div class="wrapper">
+
             <div class="box">
                 <div class="row row-offcanvas row-offcanvas-left">
 
@@ -382,35 +381,119 @@
         @*</div>*@
 
         <div id="postModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-            <form class="modal-dialog" method="get">
+            @*<div class="container">*@
+                @*<div class="row">*@
+                @*</div>*@
+            @*</div>*@
+            <form class="modal-dialog" >
                 @*<form id="twitter-user-form" class="modal-dialog" method="get">*@
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        Update Status
-                    </div>
+
                     <div class="modal-body">
-                        <div class="form center-block">
-                            <div class="form-group">
-                                <input id="twitter-user-text" type="text" class="form-control input-lg" name="userName" autofocus="" placeholder="Twitter username">
-                                <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio1" value="twitterUsername" checked>
-                                    Twitter username
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio2" value="location"> Location
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" name="type" id="inlineRadio3" value="option3"> 3
-                                </label>
+                        <div class="col-lg-5 col-md-5 col-sm-8 col-xs-9 bhoechie-tab-container">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                What would you like to analyze?
                             </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <div>
-                            <button type="submit" class="btn btn-primary btn-sm" aria-hidden="true">Add User</button>
-                            @*<button type="submit" class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Analyse profile</button>*@
-                            <ul class="pull-left list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 bhoechie-tab-menu">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item active text-center">
+                                        <h4 class="glyphicon glyphicon-list glyphicon-globe"></h4><br/>Location
+                                    </a>
+                                    <a href="#" class="list-group-item text-center">
+                                        <h4 class="glyphicon glyphicon-list glyphicon-globe"></h4><br/>Twitter user
+                                    </a>
+                                    <a href="#" class="list-group-item text-center">
+                                        <h4 class="glyphicon-list glyphicon-globe"></h4><br/>Hotel
+                                    </a>
+                                    <a href="#" class="list-group-item text-center">
+                                        <h4 class="glyphicon glyphicon-list glyphicon-cutlery"></h4><br/>Restaurant
+                                    </a>
+                                    <a href="#" class="list-group-item text-center">
+                                        <h4 class="glyphicon glyphicon-list glyphicon-credit-card"></h4><br/>Credit Card
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 bhoechie-tab">
+                                    <!-- flight section -->
+                                <div class="bhoechie-tab-content active">
+                                    <center>
+                                        <h2 style="margin-top: 0;
+                                            color: #55518a">Location</h2>
+                                        <h3 style="margin-top: 0;
+                                            color: #55518a">Trending topics and more</h3>
+                                        <form class="form-group form center-block" method="get">
+                                            <input id="locationLat" type="text" class="form-control input-lg" name="locationLat" autofocus="" placeholder="Location latitude">
+                                            <input id="locationLng" type="text" class="form-control input-lg" name="locationLng" autofocus="" placeholder="Location longitude">
+                                            <input type="radio" name="type" id="inlineRadio1" value="location" checked>
+                                            <button type="submit" class="btn btn-primary btn-sm" aria-hidden="true">Analyze location</button>
+                                        </form>
+                                        <div id="map"></div>
+                                        @*<h1 class="glyphicon glyphicon-plane" style="font-size: 14em;*@
+                                            @*color: #55518a"></h1>*@
+                                    </center>
+                                </div>
+                                    <!-- train section -->
+                                <div class="bhoechie-tab-content">
+                                    <center>
+                                        <form class="form-group form center-block" method="get">
+                                            <input id="twitter-user-text" type="text" class="form-control input-lg" name="content" autofocus="" placeholder="Twitter username">
+                                            <input type="radio" name="type" id="inlineRadio1" value="twitterUsername" checked>
+                                            <button type="submit" class="btn btn-primary btn-sm" aria-hidden="true">Analyze Twitter user</button>
+                                        </form>
+                                        <h1 class="glyphicon glyphicon-user" style="font-size: 12em;
+                                            color: #55518a"></h1>
+                                        <h2 style="margin-top: 0;
+                                            color: #55518a">Cooming Soon</h2>
+                                        <h3 style="margin-top: 0;
+                                            color: #55518a">Train Reservation</h3>
+                                    </center>
+                                </div>
+
+                                    <!-- hotel search -->
+                                <div class="bhoechie-tab-content">
+                                    <center>
+                                        <form class="form-group form center-block" method="get">
+                                            <input id="twitter-user-text" type="text" class="form-control input-lg" name="content" autofocus="" placeholder="Twitter username">
+                                            <input type="radio" name="type" id="inlineRadio1" value="twitterUsername2" checked>
+                                            <button type="submit" class="btn btn-primary btn-sm" aria-hidden="true">Add User2</button>
+                                        </form>
+                                        <h1 class="glyphicon glyphicon-home" style="font-size: 12em;
+                                            color: #55518a"></h1>
+                                        <h2 style="margin-top: 0;
+                                            color: #55518a">Cooming Soon</h2>
+                                        <h3 style="margin-top: 0;
+                                            color: #55518a">Hotel Directory</h3>
+                                    </center>
+                                </div>
+                                <div class="bhoechie-tab-content">
+                                    <center>
+                                        <h1 class="glyphicon glyphicon-cutlery" style="font-size: 12em;
+                                            color: #55518a"></h1>
+                                        <h2 style="margin-top: 0;
+                                            color: #55518a">Cooming Soon</h2>
+                                        <h3 style="margin-top: 0;
+                                            color: #55518a">Restaurant Diirectory</h3>
+                                    </center>
+                                </div>
+                                <div class="bhoechie-tab-content">
+                                    <center>
+                                        <h1 class="glyphicon glyphicon-credit-card" style="font-size: 12em;
+                                            color: #55518a"></h1>
+                                        <h2 style="margin-top: 0;
+                                            color: #55518a">Cooming Soon</h2>
+                                        <h3 style="margin-top: 0;
+                                            color: #55518a">Credit Card</h3>
+                                    </center>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <div>
+                                    <button type="submit" class="btn btn-primary btn-sm" aria-hidden="true">Add User</button>
+                                    @*<button type="submit" class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Analyse profile</button>*@
+                                    <ul class="pull-left list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -432,7 +515,7 @@
                     });
                 });
         </script>
-
+        <script type='text/javascript' src='@routes.Assets.at("javascripts/index.js")'></script>
 
     </body>
 </html>
